Allow filtering of accounts on status and on cn/name/uid. Make sure the
	* mango/views.py (list_accounts): Allow filtering of accounts on
	status and on cn/name/uid.
	* www/list_accounts.xsl: Make sure the chosen status is selected
	again.

svn path=/branches/django/; revision=269

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-06-27  Olav Vitters  <olav@bkor.dhs.org>
 
+	* mango/views.py (list_accounts): Allow filtering of accounts on
+	status and on cn/name/uid.
+	* www/list_accounts.xsl: Make sure the chosen status is selected
+	again.
+
+2008-06-27  Olav Vitters  <olav@bkor.dhs.org>
+
 	* mango/models.py (LdapObject._build_filter): Add hackish way to
 	specify a __contains LDAP query.
 	* mango/views.py (list_users): Allow filtering on uid, cn, mail.
