--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,16 @@
 2008-06-28  Olav Vitters  <olav@bkor.dhs.org>
 
+	* mango/models.py (Foundationmembers.need_to_renew): Don't fail when
+	last_renewed_on is false (new foundation members).
+	* mango/urls.py: Add URL for new add_foundationmember view.
+	* mango/views.py (add_foundationmember): Allow creation of new
+	foundation members.
+	* www/list_foundationmembers.xsl: Correct link to add_foundationmember
+	view.
+	* www/new_foundationmember.xsl: Correct link to view.
+
+2008-06-28  Olav Vitters  <olav@bkor.dhs.org>
+
 	* mango/models.py (Foundationmembers): Set initial last_renewed_on to
 	current date.
 
